tests/paren2.err
30 DIM F(4)
           ^
Error: expected array, found user-defined function: F
