tests/paren2.bas
10 REM DEFINED AS FUNCTION AND ARRAY
20 DEF F(X)=X+1
30 DIM F(4)
40 PRINT F(0)
